src/App.css
iframe {
  display: none;
}

* {
  box-sizing: border-box;
}

html {
  font-family: "Source Sans Pro", "Open Sans", Roboto, Arial, sans-serif;
  font-size: 10pt;
  font-weight: 400;
  line-height: 1.4;
}

body {
  margin: 0;
  background: #eee;
}

.welcome {
  height: 100vh;
  background: coral;
}

.welcome__text {
  display: block;

  margin: 0;
  padding-top: calc(50vh - 20pt);

  font-size: 400%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
}

.header {
  position: sticky;
  top: 0;
  right: 0;
  left: 0;

  width: 100%;
  padding: 1em;

  font-size: 140%;
  text-align: center;

  transition: opacity 0.2s ease-in-out;
}

.header__title {
  display: inline;

  margin: 0;
  padding: 0;

  font-size: inherit;
  font-weight: 600;
}

.navigation__link {
  display: inline-block;

  padding: 0 0.5em;

  color: black;
  text-decoration: none;

  opacity: 0.7;
  outline: none;

  transition: opacity 0.2s ease-in-out;
}

.navigation__link:hover,
.navigation__link:focus {
  opacity: 1;
}

.article {
  max-width: 800px;
  margin: 5em auto 0;
  padding: 1em;

  font-size: 140%;

  background: white;
  box-shadow: rgba(0, 0, 0, 0.05) 0 3px 15px;
}

.article__paragraph {
  margin: 0;
  color: #333;
}

.article__paragraph:not(:first-child) {
  margin-top: 0.7em;
}

@media (min-width: 500px) {
  .header {
    display: flex;
    justify-content: space-between;
    text-align: left;
  }

  .article {
    margin: 3.5em auto 0;
    padding: 2em;
  }
}

@media (min-width: 800px) {
  .article {
    margin: 3.5em auto;
  }
}

